--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p>Who are in extremely love with eco friendly system.</p>
                     </div>
                     <div class="product-list">
-                        <div class="product">
+                        <!-- <div class="product">
                             <div class="image">
                                 <img src="./assets/p1.png.webp" alt="">
                             </div>
@@ -105,7 +105,7 @@
                                 <p>Who are in extremely love with eco friendly system.</p>
                                 <button>View Details</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
