--- a/index.html
+++ b/index.html
@@ -138,6 +138,83 @@
                 </div>
             </div>
         </div>
+        <div class="feature">
+            <div class="container">
+                <div class="feature-wrapper">
+                    <div class="title">
+                        <h1>Some Features that Made us Unique</h1>
+                        <span>Who are in extremely love with eco friendly system.</span>
+                    </div>
+                    <div class="grid">
+                        <div class="item">
+                            <div class="top">
+                                <i class="bx bx-user"></i>
+                                <span>Lorem, ipsum dolor.</span>
+                            </div>
+                            <div class="bottom">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="top">
+                                <i class="bx bx-user"></i>
+                                <span>Lorem, ipsum dolor.</span>
+                            </div>
+                            <div class="bottom">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="top">
+                                <i class="bx bx-user"></i>
+                                <span>Lorem, ipsum dolor.</span>
+                            </div>
+                            <div class="bottom">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="top">
+                                <i class="bx bx-user"></i>
+                                <span>Lorem, ipsum dolor.</span>
+                            </div>
+                            <div class="bottom">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="top">
+                                <i class="bx bx-user"></i>
+                                <span>Lorem, ipsum dolor.</span>
+                            </div>
+                            <div class="bottom">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="top">
+                                <i class="bx bx-user"></i>
+                                <span>Lorem, ipsum dolor.</span>
+                            </div>
+                            <div class="bottom">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="logos">
+            <div class="container">
+                <div class="logo-wrapper">
+                    <img src="./assets/l1.png.webp" alt="">
+                    <img src="./assets/l1.png.webp" alt="">
+                    <img src="./assets/l1.png.webp" alt="">
+                    <img src="./assets/l1.png.webp" alt="">
+                    <img src="./assets/l1.png.webp" alt="">
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
