--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Samir</title>
 </head>
+
 <body>
     <div class="wrapper">
         <nav>
@@ -120,7 +122,9 @@
                         <div class="text">
                             <h1>Globally Connected by Large Network</h1>
                             <span>We are here to listen from you deliver exellence</span>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.Ut enim ad minim. Lorem ipsum dolor sit
+                                amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                             <button>Get Details</button>
                         </div>
                     </div>
@@ -128,7 +132,9 @@
                         <div class="text">
                             <h1>Globally Connected by Large Network</h1>
                             <span>We are here to listen from you deliver exellence</span>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.Ut enim ad minim. Lorem ipsum dolor sit
+                                amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                             <button>Get Details</button>
                         </div>
                         <div class="image">
@@ -152,7 +158,9 @@
                                 <span>Lorem, ipsum dolor.</span>
                             </div>
                             <div class="bottom">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid
+                                    deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam
+                                    neque dolore nulla voluptatibus officiis. Dolorum?</p>
                             </div>
                         </div>
                         <div class="item">
@@ -161,7 +169,9 @@
                                 <span>Lorem, ipsum dolor.</span>
                             </div>
                             <div class="bottom">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid
+                                    deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam
+                                    neque dolore nulla voluptatibus officiis. Dolorum?</p>
                             </div>
                         </div>
                         <div class="item">
@@ -170,7 +180,9 @@
                                 <span>Lorem, ipsum dolor.</span>
                             </div>
                             <div class="bottom">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid
+                                    deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam
+                                    neque dolore nulla voluptatibus officiis. Dolorum?</p>
                             </div>
                         </div>
                         <div class="item">
@@ -179,7 +191,9 @@
                                 <span>Lorem, ipsum dolor.</span>
                             </div>
                             <div class="bottom">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid
+                                    deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam
+                                    neque dolore nulla voluptatibus officiis. Dolorum?</p>
                             </div>
                         </div>
                         <div class="item">
@@ -188,7 +202,9 @@
                                 <span>Lorem, ipsum dolor.</span>
                             </div>
                             <div class="bottom">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid
+                                    deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam
+                                    neque dolore nulla voluptatibus officiis. Dolorum?</p>
                             </div>
                         </div>
                         <div class="item">
@@ -197,7 +213,9 @@
                                 <span>Lorem, ipsum dolor.</span>
                             </div>
                             <div class="bottom">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam neque dolore nulla voluptatibus officiis. Dolorum?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vero, cum et aliquid
+                                    deleniti numquam in ab, nam quidem velit omnis voluptatem blanditiis laboriosam
+                                    neque dolore nulla voluptatibus officiis. Dolorum?</p>
                             </div>
                         </div>
                     </div>
@@ -215,7 +233,94 @@
                 </div>
             </div>
         </div>
+        <div class="end">
+            <div class="container">
+                <div class="end-wrapper">
+                    <div class="title">
+                        <h1>Some Features that Made us Unique</h1>
+                        <span>Who are in extremely love with eco friendly system.</span>
+                    </div>
+                    <div class="images">
+                        <div class="box">
+                            <div class="img">
+                                <img src="./assets/b1.jpg" alt="">
+                            </div>
+                            <div class="texts">
+                                <div class="buttons">
+                                    <button>Travel</button>
+                                    <button>Life Style</button>
+                                </div>
+                                <span>Lorem ipsum dolor sit amet.</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore.</p>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="img">
+                                <img src="./assets/b2.jpg" alt="">
+                            </div>
+                            <div class="texts">
+                                <div class="buttons">
+                                    <button>Travel</button>
+                                    <button>Life Style</button>
+                                </div>
+                                <span>Lorem ipsum dolor sit amet.</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="container">
+                <div class="footer-wrapper">
+                    <div class="top">
+                        <div class="left">
+                            <h3>Top Products</h3>
+                            <div class="links">
+                                <span>Managed Website</span>
+                                <span>Manage Reputation</span>
+                                <span>Power Tools</span>
+                                <span>Marketing Service</span>
+                            </div>
+                        </div>
+                        <div class="center">
+                            <h3>Newsletter</h3>
+                            <p>You can trust us. we only send promo offers, not a single spam.</p>
+                            <div class="input-box">
+                                <input type="email" placeholder="Enter Email">
+                                <button>Subscribe<i class='bx bx-right-arrow-alt'></i></button>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <h3>Instragram Feed</h3>
+                            <div class="feed">
+                                <img src="./assets/i1.jpg" alt="">
+                                <img src="./assets/i2.jpg" alt="">
+                                <img src="./assets/i3.jpg" alt="">
+                                <img src="./assets/i4.jpg" alt="">
+                                <img src="./assets/i5.jpg" alt="">
+                                <img src="./assets/i6.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom">
+                        <div class="left">Copyright ©2023 All rights reserved | This template is made with by Colorlib
+                        </div>
+                        <div class="right">
+                            <i class="bx bxl-facebook"></i>
+                            <i class="bx bxl-twitter"></i>
+                            <i class="bx bxl-facebook"></i>
+                            <i class="bx bxl-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
