--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                                 <button>View Details</button>
                             </div>
                         </div> -->
+                        <a href="add.html" class="product add-product"><i class="bx bx-plus"></i></a>
                     </div>
                 </div>
             </div>
@@ -320,6 +321,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script.js"></script>
 </body>
 
