--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                 </div>
             </div>
         </nav>
+        <div class="up">
+            <i class='bx bxs-chevron-up'></i>
+            <span>Yuxarı çıx</span>
+        </div>
         <div class="banner">
             <div class="container">
                 <div class="banner-wrapper">
