--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/Css/style.css">
     <title>Samir | Details</title>
 </head>
 <body>
@@ -56,6 +56,6 @@
             </div>
         </div>
     </div>
-    <script src="./details.js"></script>
+    <script src="./assets/Js/details.js"></script>
 </body>
 </html>
