--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/Css/style.css">
     <title>Samir</title>
 </head>
 
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="index.html" class="logo">
-                        <img src="./assets/logo.png.webp" alt="logo">
+                        <img src="./assets/Image/logo.png.webp" alt="logo">
                     </a>
                     <div class="overlay"></div>
                     <ul class="menu">
@@ -59,7 +59,7 @@
                         <button>View Button</button>
                     </div>
                     <div class="image">
-                        <img src="./assets/banner-img.png.webp" alt="banner">
+                        <img src="./assets/Image/banner-img.png.webp" alt="banner">
                     </div>
                 </div>
             </div>
@@ -72,46 +72,7 @@
                         <p>Who are in extremely love with eco friendly system.</p>
                     </div>
                     <div class="product-list">
-                        <!-- <div class="product">
-                            <div class="image">
-                                <img src="./assets/p1.png.webp" alt="">
-                            </div>
-                            <div class="about">
-                                <span>The Upper Eye</span>
-                                <p>Who are in extremely love with eco friendly system.</p>
-                                <button>View Details</button>
-                            </div>
-                        </div>
-                        <div class="product">
-                            <div class="image">
-                                <img src="./assets/p2.png.webp" alt="">
-                            </div>
-                            <div class="about">
-                                <span>The Crab Wheel</span>
-                                <p>Who are in extremely love with eco friendly system.</p>
-                                <button>View Details</button>
-                            </div>
-                        </div>
-                        <div class="product">
-                            <div class="image">
-                                <img src="./assets/p3.png.webp" alt="">
-                            </div>
-                            <div class="about">
-                                <span>The Plug Ninja</span>
-                                <p>Who are in extremely love with eco friendly system.</p>
-                                <button>View Details</button>
-                            </div>
-                        </div>
-                        <div class="product">
-                            <div class="image">
-                                <img src="./assets/p4.png.webp" alt="">
-                            </div>
-                            <div class="about">
-                                <span>The Controller</span>
-                                <p>Who are in extremely love with eco friendly system.</p>
-                                <button>View Details</button>
-                            </div>
-                        </div> -->
+                        
                         <a href="add.html" class="product add-product"><i class="bx bx-plus"></i></a>
                     </div>
                     <button class="more-btn">Load More</button>
@@ -122,7 +83,7 @@
             <form class="update">
                 <input type="file" id="add-image">
                 <label class="add-image" for="add-image">
-                    <img src="./assets/user.webp" alt="">
+                    <img src="./assets/Image/user.webp" alt="">
                     <i class='bx bx-camera'></i>
                 </label>
                 <div class="inputs">
@@ -141,7 +102,7 @@
                 <div class="info-wrapper">
                     <div class="top">
                         <div class="image">
-                            <img src="./assets/about-img.png.webp" alt="">
+                            <img src="./assets/Image/about-img.png.webp" alt="">
                         </div>
                         <div class="text">
                             <h1>Globally Connected by Large Network</h1>
@@ -162,7 +123,7 @@
                             <button>Get Details</button>
                         </div>
                         <div class="image">
-                            <img src="./assets/about-img.png.webp" alt="">
+                            <img src="./assets/Image/about-img.png.webp" alt="">
                         </div>
                     </div>
                 </div>
@@ -249,11 +210,11 @@
         <div class="logos">
             <div class="container">
                 <div class="logo-wrapper">
-                    <img src="./assets/l1.png.webp" alt="">
-                    <img src="./assets/l1.png.webp" alt="">
-                    <img src="./assets/l1.png.webp" alt="">
-                    <img src="./assets/l1.png.webp" alt="">
-                    <img src="./assets/l1.png.webp" alt="">
+                    <img src="./assets/İmage/l1.png.webp" alt="">
+                    <img src="./assets/İmage/l2.png.webp" alt="">
+                    <img src="./assets/İmage/l3.png.webp" alt="">
+                    <img src="./assets/İmage/l4.png.webp" alt="">
+                    <img src="./assets/İmage/l5.png.webp" alt="">
                 </div>
             </div>
         </div>
@@ -267,7 +228,7 @@
                     <div class="images">
                         <div class="box">
                             <div class="img">
-                                <img src="./assets/b1.jpg" alt="">
+                                <img src="./assets/Image/b1.jpg" alt="">
                             </div>
                             <div class="texts">
                                 <div class="buttons">
@@ -281,7 +242,7 @@
                         </div>
                         <div class="box">
                             <div class="img">
-                                <img src="./assets/b2.jpg" alt="">
+                                <img src="./assets/Image/b2.jpg" alt="">
                             </div>
                             <div class="texts">
                                 <div class="buttons">
@@ -321,12 +282,12 @@
                         <div class="right">
                             <h3>Instragram Feed</h3>
                             <div class="feed">
-                                <img src="./assets/i1.jpg" alt="">
-                                <img src="./assets/i2.jpg" alt="">
-                                <img src="./assets/i3.jpg" alt="">
-                                <img src="./assets/i4.jpg" alt="">
-                                <img src="./assets/i5.jpg" alt="">
-                                <img src="./assets/i6.jpg" alt="">
+                                <img src="./assets/Image/i1.jpg" alt="">
+                                <img src="./assets/Image/i2.jpg" alt="">
+                                <img src="./assets/Image/i3.jpg" alt="">
+                                <img src="./assets/Image/i4.jpg" alt="">
+                                <img src="./assets/Image/i5.jpg" alt="">
+                                <img src="./assets/Image/i6.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -345,7 +306,7 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./assets/Js/script.js"></script>
 </body>
 
 </html>
